--- a/a_pi/post.html
+++ b/a_pi/post.html
@@ -1,4 +1,7 @@
 <form action='http://127.0.0.1:5000' method="post">
+	Digit
 	<input type="text" name='digit'>
+	Job
+	<input type="text" name='job'>
 	<input type="submit" value="Submit">
 </form> 
