--- a/Unitator/test.html
+++ b/Unitator/test.html
@@ -1,4 +1,4 @@
-<form action="http://localhost:1902" method="post">
+<form action="http://translator-service:1902" method="post">
 	<input name="job" type="text"> 
 	<textarea name="message">
 	</textarea>
